<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edt1"
        android:inputType="numberDecimal"
        android:text=""
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/tv2"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@color/colorAccent"
        android:onClick="dollar"
        android:padding="20dp"
        android:text="@string/btn1"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@color/colorAccent"
        android:onClick="dollar"
        android:padding="20dp"
        android:text="@string/btn3"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="162dp"
        android:background="@color/colorAccent"
        android:onClick="config"
        android:padding="20dp"
        android:text="@string/btn4"
        android:textSize="24sp" />

</LinearLayout>