<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <EditText
        android:id="@+id/edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edt2"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="36sp" />

    <EditText
        android:id="@+id/edt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="13dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edt3"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="36sp" />

    <EditText
        android:id="@+id/edt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edt4"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="36sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="346dp"
        android:background="@color/colorAccent"
        android:onClick="save"
        android:padding="20dp"
        android:text="@string/btn5"
        android:textSize="36sp" />

</LinearLayout>